Fixed bug #31525 (object reference being dropped. $this getting lost)