Zend/zend_execute.c
@@ -2281,6 +2281,15 @@ int zend_assign_ref_handler(ZEND_OPCODE_HANDLER_ARGS)
 {
 	zval **value_ptr_ptr = get_zval_ptr_ptr(&opline->op2, EX(Ts), BP_VAR_W);
 
+	if (opline->op2.op_type == IS_VAR &&
+	    !(*value_ptr_ptr)->is_ref &&
+	    opline->extended_value == ZEND_RETURNS_FUNCTION && 
+	    !EX_T(opline->op2.u.var).var.fcall_returned_reference) {
+		zend_error(E_STRICT, "Only variables should be assigned by reference");
+		PZVAL_LOCK(*value_ptr_ptr); /* undo the effect of get_zval_ptr_ptr() */
+		return zend_assign_handler(ZEND_OPCODE_HANDLER_ARGS_PASSTHRU);
+	}
+
 	zend_assign_to_variable_reference(&opline->result, get_zval_ptr_ptr(&opline->op1, EX(Ts), BP_VAR_W), value_ptr_ptr, EX(Ts) TSRMLS_CC);
 
 	NEXT_OPCODE();
